# brief_CI_CD_alternance

./: .secrets.baseline  404.html  BRIEF_CI_CD_V2.md  CHANGELOG.md  Dockerfile  PROBLEMES_DETECTES.md  README.md  VEILLE_CI_DC.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  ci.yaml  ci.yml  docs.yml  release.yml
api/models/: index.html
api/routes/: index.html
api/services/: index.html
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
app/schemas/: item.py
changelog/: index.html
cicd/: index.html
docs/: changelog.md  cicd.md  getting-started.md  index.md
docs/api/: models.md  routes.md  services.md
getting-started/: index.html
search/: search_index.json
tests/: test_health.py
